--- a/sheba.xyz/package.json
+++ b/sheba.xyz/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.2.0",
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
     "firebase": "^12.9.0",
+    "json-server": "^1.0.0-beta.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
@@ -29,5 +32,10 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "vite": "^7.3.1"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
